--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type"  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" type="text/css" href="dist/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="dist/css/style.css"/>
