--- a/index.html
+++ b/index.html
@@ -59,39 +59,33 @@
                 </div>
 
                 <div class="grid">
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-1.png" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">360 degree flight experience</h3>
                         <p>Thomas Cook Airlines</p>
                     </a>
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-2.png" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">Going beyond frontiers</h3>
                         <p>SES</p>
                     </a>
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-3.png" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">The Lobster</h3>
                         <p>Picture House Entertainment</p>
                     </a>
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-4.jpg" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">Cats on a plane</h3>
                         <p>Thomas Cook Airlines</p>
                     </a>
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-5.png" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">London Zoo Goes Mobile</h3>
                         <p>SES</p>
                     </a>
-                    <a class="grid-item">
+                    <a href="#0" class="grid-item">
                         <img src="dist/assets/card-6.png" alt="360 degree VR flight experience" class="grid-item-image">
-                        <div class="grid-image-dark"></div>
                         <h3 class="bravo">Ronald's Debut Fragrance</h3>
                         <p>Christiano Ronaldo Fragrances</p>
                     </a>
